--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,194 @@
+@article {MR4595191,
+    AUTHOR = {Nandakumaran, A.K. and Sufian, Abu and Thazhathethil, Renjith},
+     TITLE = {Homogenization of elliptic {PDE} with {$L^1$} source term in
+              domains with boundary having very general oscillations},
+   JOURNAL = {Asymptot. Anal.},
+  FJOURNAL = {Asymptotic Analysis},
+    VOLUME = {133},
+      YEAR = {2023},
+    NUMBER = {1-2},
+     PAGES = {123--158},
+      ISSN = {0921-7134,1875-8576},
+   MRCLASS = {35B27},
+  MRNUMBER = {4595191},
+       DOI = {10.3233/asy-221808},
+       URL = {https://doi.org/10.3233/asy-221808},
+}
+@article {MR4578009,
+    AUTHOR = {Roy, Saikat and Sain, Debmalya},
+     TITLE = {Approximate orthogonality in complex normed spaces: a
+              directional approach},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {71},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {711--727},
+      ISSN = {0308-1087,1563-5139},
+   MRCLASS = {46B28 (46B20)},
+  MRNUMBER = {4578009},
+       DOI = {10.1080/03081087.2022.2042175},
+       URL = {https://doi.org/10.1080/03081087.2022.2042175},
+}
+@article {MR4577338,
+    AUTHOR = {Biswas, Chandan and Stovall, Betsy},
+     TITLE = {Existence of extremizers for {F}ourier restriction to the
+              moment curve},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {376},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {3473--3492},
+      ISSN = {0002-9947,1088-6850},
+   MRCLASS = {42B10 (42A38)},
+  MRNUMBER = {4577338},
+       DOI = {10.1090/tran/8872},
+       URL = {https://doi.org/10.1090/tran/8872},
+}
+@article {MR4576945,
+    AUTHOR = {Balakumar, G. P. and Borah, Diganta and Mahajan, Prachi and
+              Verma, Kaushal},
+     TITLE = {Limits of an increasing sequence of complex manifolds},
+   JOURNAL = {Ann. Mat. Pura Appl. (4)},
+  FJOURNAL = {Annali di Matematica Pura ed Applicata. Series IV},
+    VOLUME = {202},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {1381--1410},
+      ISSN = {0373-3114,1618-1891},
+   MRCLASS = {32F45},
+  MRNUMBER = {4576945},
+       DOI = {10.1007/s10231-022-01285-9},
+       URL = {https://doi.org/10.1007/s10231-022-01285-9},
+}
+@article {MR4575947,
+    AUTHOR = {Deo, Shaunak V. and Ray, Anwesh and Sujatha, R.},
+     TITLE = {On the {$\mu$} equals zero conjecture for fine {S}elmer groups
+              in {I}wasawa theory},
+   JOURNAL = {Pure Appl. Math. Q.},
+  FJOURNAL = {Pure and Applied Mathematics Quarterly},
+    VOLUME = {19},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {641--680},
+      ISSN = {1558-8599,1558-8602},
+   MRCLASS = {11R23 (11F11 11F80 11G05)},
+  MRNUMBER = {4575947},
+       DOI = {10.4310/pamq.2023.v19.n2.a8},
+       URL = {https://doi.org/10.4310/pamq.2023.v19.n2.a8},
+}
+@article {MR4575776,
+    AUTHOR = {Dey, Hiranya Kishore},
+     TITLE = {Interlacing of zeroes of certain real-rooted polynomials},
+   JOURNAL = {Arch. Math. (Basel)},
+  FJOURNAL = {Archiv der Mathematik},
+    VOLUME = {120},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {457--466},
+      ISSN = {0003-889X,1420-8938},
+   MRCLASS = {05A15 (05A05 26C10)},
+  MRNUMBER = {4575776},
+       DOI = {10.1007/s00013-023-01837-2},
+       URL = {https://doi.org/10.1007/s00013-023-01837-2},
+}
+@article {MR4575014,
+    AUTHOR = {Ayyer, A. and Goldstein, S. and Lebowitz, J. L. and Speer, E.
+              R.},
+     TITLE = {Stationary states of the one-dimensional facilitated
+              asymmetric exclusion process},
+   JOURNAL = {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  FJOURNAL = {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s et
+              Statistiques},
+    VOLUME = {59},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {726--742},
+      ISSN = {0246-0203,1778-7017},
+   MRCLASS = {60K35 (82C22 82C23 82C26)},
+  MRNUMBER = {4575014},
+       DOI = {10.1214/22-aihp1264},
+       URL = {https://doi.org/10.1214/22-aihp1264},
+}
+@article {MR4574904,
+    AUTHOR = {Sain, Debmalya and Sohel, Shamim and Ghosh, Souvik and Paul,
+              Kallol},
+     TITLE = {On best coapproximations in subspaces of diagonal matrices},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {71},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {47--62},
+      ISSN = {0308-1087,1563-5139},
+   MRCLASS = {46B20 (47L05)},
+  MRNUMBER = {4574904},
+       DOI = {10.1080/03081087.2021.2017835},
+       URL = {https://doi.org/10.1080/03081087.2021.2017835},
+}
+@article {MR4573508,
+    AUTHOR = {Sain, Debmalya and Mal, Arpita and Bhunia, Pintu and Paul,
+              Kallol},
+     TITLE = {Corrigendum to ``{O}n numerical radius and {C}rawford number
+              attainment sets of a bounded linear operator''},
+   JOURNAL = {J. Convex Anal.},
+  FJOURNAL = {Journal of Convex Analysis},
+    VOLUME = {30},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {401--402},
+      ISSN = {0944-6532,2363-6394},
+   MRCLASS = {47A12 (46B20)},
+  MRNUMBER = {4573508},
+}
+@article {MR4571845,
+    AUTHOR = {Biswas, Dipnit and Habib, Irfan and Venkatesh, R.},
+     TITLE = {On symmetric closed subsets of real affine root systems},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {628},
+      YEAR = {2023},
+     PAGES = {212--240},
+      ISSN = {0021-8693,1090-266X},
+   MRCLASS = {17B22},
+  MRNUMBER = {4571845},
+       DOI = {10.1016/j.jalgebra.2023.03.017},
+       URL = {https://doi.org/10.1016/j.jalgebra.2023.03.017},
+}
+@article {MR4571664,
+    AUTHOR = {Bose, Babhrubahan and Roy, Saikat and Sain, Debmalya},
+     TITLE = {Birkhoff-{J}ames orthogonality and its local symmetry in some
+              sequence spaces},
+   JOURNAL = {Rev. R. Acad. Cienc. Exactas F\'{i}s. Nat. Ser. A Mat. RACSAM},
+  FJOURNAL = {Revista de la Real Academia de Ciencias Exactas, F\'{i}sicas y
+              Naturales. Serie A. Matematicas. RACSAM},
+    VOLUME = {117},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {Paper No. 93, 16},
+      ISSN = {1578-7303,1579-1505},
+   MRCLASS = {46B45 (46B20 46B25)},
+  MRNUMBER = {4571664},
+       DOI = {10.1007/s13398-023-01420-y},
+       URL = {https://doi.org/10.1007/s13398-023-01420-y},
+}
+@article {MR4570226,
+    AUTHOR = {Ballal, Aashirwad},
+     TITLE = {The supercritical deformed {H}ermitian {Y}ang-{M}ills equation
+              on compact projective manifolds},
+   JOURNAL = {Illinois J. Math.},
+  FJOURNAL = {Illinois Journal of Mathematics},
+    VOLUME = {67},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {73--99},
+      ISSN = {0019-2082,1945-6581},
+   MRCLASS = {53C07 (53C55 53C56)},
+  MRNUMBER = {4570226},
+       DOI = {10.1215/00192082-10417484},
+       URL = {https://doi.org/10.1215/00192082-10417484},
+}
 @article {MR4568605,
 
     AUTHOR = {Bouthat, Ludovick and Khare, Apoorva and Mashreghi, Javad and
@@ -60,6 +251,83 @@
 
 }
 
+@article {MR4565947,
+    AUTHOR = {Datar, Ved and Fu, Xin and Song, Jian},
+     TITLE = {K\"{a}hler-{E}instein metrics near an isolated log-canonical
+              singularity},
+   JOURNAL = {J. Reine Angew. Math.},
+  FJOURNAL = {Journal f\"{u}r die Reine und Angewandte Mathematik. [Crelle's
+              Journal]},
+    VOLUME = {797},
+      YEAR = {2023},
+     PAGES = {79--116},
+      ISSN = {0075-4102,1435-5345},
+   MRCLASS = {32Q20},
+  MRNUMBER = {4565947},
+       DOI = {10.1515/crelle-2022-0095},
+       URL = {https://doi.org/10.1515/crelle-2022-0095},
+}
+@article {MR4565708,
+    AUTHOR = {Lakshmi Priya, M. E.},
+     TITLE = {Overcrowding estimates for the nodal volume of stationary
+              {G}aussian processes},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2023},
+    NUMBER = {7},
+     PAGES = {6132--6163},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {60G15 (60G10)},
+  MRNUMBER = {4565708},
+       DOI = {10.1093/imrn/rnac035},
+       URL = {https://doi.org/10.1093/imrn/rnac035},
+}
+@article {MR4565647,
+    AUTHOR = {Bhattacharyya, Tirthankar and Das, B. Krishna and Sau,
+              Haripada},
+     TITLE = {Addendum to: {T}oeplitz operators on the symmetrized bidisc},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {3597},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {32M15 (32A70 47B35)},
+  MRNUMBER = {4565647},
+       DOI = {10.1093/imrn/rnab252},
+       URL = {https://doi.org/10.1093/imrn/rnab252},
+}
+@article {MR4565635,
+    AUTHOR = {Aas, Erik and Ayyer, Arvind and Linusson, Svante and Potka,
+              Samu},
+     TITLE = {Limiting directions for random walks in classical affine
+              {W}eyl groups},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {3092--3137},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {60K35 (20F55 82C23)},
+  MRNUMBER = {4565635},
+       DOI = {10.1093/imrn/rnab317},
+       URL = {https://doi.org/10.1093/imrn/rnab317},
+}
+@article {MR4565223,
+    AUTHOR = {Gehlawat, Sahil and Jain, Aakanksha and Sarkar, Amar Deep},
+     TITLE = {The reduced {B}ergman kernel and its properties},
+   JOURNAL = {Internat. J. Math.},
+  FJOURNAL = {International Journal of Mathematics},
+    VOLUME = {34},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {Paper No. 2350015, 23},
+      ISSN = {0129-167X,1793-6519},
+   MRCLASS = {30H20 (30C40 46E22)},
+  MRNUMBER = {4565223},
+       DOI = {10.1142/S0129167X23500155},
+       URL = {https://doi.org/10.1142/S0129167X23500155},
+}
 @article {MR4562577,
 
     AUTHOR = {Sheth, Mihir},
@@ -92,6 +360,21 @@
 
 }
 
+@article {MR4561466,
+    AUTHOR = {Hatui, Sumana and Narayanan, E. K. and Singla, Pooja},
+     TITLE = {On projective representations of finitely generated groups},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {51},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {1994--2003},
+      ISSN = {0092-7872,1532-4125},
+   MRCLASS = {20C25 (20C15 20F18 20G05)},
+  MRNUMBER = {4561466},
+       DOI = {10.1080/00927872.2022.2149763},
+       URL = {https://doi.org/10.1080/00927872.2022.2149763},
+}
 @article {MR4561392,
 
     AUTHOR = {Sain, Debmalya and Roy, Saikat and Tanaka, Ryotaro},
@@ -124,7 +407,215 @@
 
 }
 
-@article {MR4536405,
+@article {MR4555923,
+    AUTHOR = {Faryad, Elias and Khurana, Divya and Moslehian, Mohammad Sal
+              and Sain, Debmalya},
+     TITLE = {A generalization of the {R}oberts orthogonality: from normed
+              linear spaces to {$C^*$}-algebras},
+   JOURNAL = {Monatsh. Math.},
+  FJOURNAL = {Monatshefte f\"{u}r Mathematik},
+    VOLUME = {200},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {605--625},
+      ISSN = {0026-9255,1436-5081},
+   MRCLASS = {46L05 (47A30)},
+  MRNUMBER = {4555923},
+       DOI = {10.1007/s00605-022-01799-7},
+       URL = {https://doi.org/10.1007/s00605-022-01799-7},
+}
+@article {MR4554976,
+    AUTHOR = {Balodi, Mamta and Banerjee, Abhishek},
+     TITLE = {Fredholm modules over categories, {C}onnes periodicity and
+              classes in cyclic cohomology},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'{e}matique. Acad\'{e}mie des Sciences.
+              Paris},
+    VOLUME = {361},
+      YEAR = {2023},
+     PAGES = {617--652},
+      ISSN = {1631-073X,1778-3569},
+   MRCLASS = {18E05 (16E40 16T05 47A53 58B34)},
+  MRNUMBER = {4554976},
+       DOI = {10.5802/crmath.429},
+       URL = {https://doi.org/10.5802/crmath.429},
+}
+@article {MR4554425,
+    AUTHOR = {Binda, Federico and Krishna, Amalendu and Saito, Shuji},
+     TITLE = {Bloch's formula for 0-cycles with modulus and
+              higher-dimensional class field theory},
+   JOURNAL = {J. Algebraic Geom.},
+  FJOURNAL = {Journal of Algebraic Geometry},
+    VOLUME = {32},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {323--384},
+      ISSN = {1056-3911,1534-7486},
+   MRCLASS = {14C25 (11G45 14C15 19E15)},
+  MRNUMBER = {4554425},
+       DOI = {10.1090/jag/792},
+       URL = {https://doi.org/10.1090/jag/792},
+}
+@article {MR4552715,
+    AUTHOR = {Ayyer, Arvind and Mandelshtam, Olya and Martin, James B.},
+     TITLE = {Modified {M}acdonald polynomials and the multispecies
+              zero-range process: {I}},
+   JOURNAL = {Algebr. Comb.},
+  FJOURNAL = {Algebraic Combinatorics},
+    VOLUME = {6},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {243--284},
+      ISSN = {2589-5486},
+   MRCLASS = {05E05},
+  MRNUMBER = {4552715},
+       DOI = {10.5802/alco.248},
+       URL = {https://doi.org/10.5802/alco.248},
+}
+@article {MR4552668,
+    AUTHOR = {Anamby, Pramath and Das, Soumya},
+     TITLE = {Jacobi forms, {S}aito-{K}urokawa lifts, their {P}ullbacks and
+              sup-norms on average},
+   JOURNAL = {Res. Math. Sci.},
+  FJOURNAL = {Research in the Mathematical Sciences},
+    VOLUME = {10},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {Paper No. 14, 52},
+      ISSN = {2522-0144,2197-9847},
+   MRCLASS = {11F50 (11F11 11F30 11F37 11F46 11F66)},
+  MRNUMBER = {4552668},
+       DOI = {10.1007/s40687-023-00377-z},
+       URL = {https://doi.org/10.1007/s40687-023-00377-z},
+}
+@article {MR4552077,
+    AUTHOR = {Nandakumaran, A. K. and Sufian, Abu and Thazhathethil,
+              Renjith},
+     TITLE = {Homogenization with strong contrasting diffusivity in a
+              circular oscillating domain with {$L^1$} source term},
+   JOURNAL = {Ann. Mat. Pura Appl. (4)},
+  FJOURNAL = {Annali di Matematica Pura ed Applicata. Series IV},
+    VOLUME = {202},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {763--786},
+      ISSN = {0373-3114,1618-1891},
+   MRCLASS = {80M40 (35B27 80M35)},
+  MRNUMBER = {4552077},
+       DOI = {10.1007/s10231-022-01259-x},
+       URL = {https://doi.org/10.1007/s10231-022-01259-x},
+}
+@article {MR4551544,
+    AUTHOR = {Ayyer, Arvind and Sinha, Shubham},
+     TITLE = {The size of {$t$}-cores and hook lengths of random cells in
+              random partitions},
+   JOURNAL = {Ann. Appl. Probab.},
+  FJOURNAL = {The Annals of Applied Probability},
+    VOLUME = {33},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {85--106},
+      ISSN = {1050-5164,2168-8737},
+   MRCLASS = {60C05 (05A15 05A17 05E10 11P82 60B10)},
+  MRNUMBER = {4551544},
+       DOI = {10.1214/22-aap1809},
+       URL = {https://doi.org/10.1214/22-aap1809},
+}
+@article {MR4550775,
+    AUTHOR = {\'{A}lvarez-C\'{o}nsul, Luis and Garcia-Fernandez, Mario and
+              Garc\'{i}a-Prada, Oscar and Pingali, Vamsi Pritham and Yao,
+              Chengjian},
+     TITLE = {Obstructions to the existence of solutions of the self-dual
+              {E}instein-{M}axwell-{H}iggs equations on a compact surface},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {183},
+      YEAR = {2023},
+     PAGES = {Paper No. 103233, 14},
+      ISSN = {0007-4497},
+   MRCLASS = {58J05 (53C15 83C05)},
+  MRNUMBER = {4550775},
+       DOI = {10.1016/j.bulsci.2023.103233},
+       URL = {https://doi.org/10.1016/j.bulsci.2023.103233},
+}
+@article {MR4550443,
+    AUTHOR = {Gadgil, Siddhartha and Krishnapur, Manjunath},
+     TITLE = {Random words in free groups, non-crossing matchings and {RNA}
+              secondary structures},
+   JOURNAL = {Indian J. Pure Appl. Math.},
+  FJOURNAL = {Indian Journal of Pure and Applied Mathematics},
+    VOLUME = {54},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {146--158},
+      ISSN = {0019-5588,0975-7465},
+   MRCLASS = {20E05 (20F65 60C05 60J10 92B05)},
+  MRNUMBER = {4550443},
+       DOI = {10.1007/s13226-022-00240-x},
+       URL = {https://doi.org/10.1007/s13226-022-00240-x},
+}
+@article {MR4550337,
+    AUTHOR = {Baslingker, Jnaneshwar and Dan, Biltu},
+     TITLE = {On {H}adamard powers of positive semi-definite matrices},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {151},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {1395--1401},
+      ISSN = {0002-9939,1088-6826},
+   MRCLASS = {15B48 (15A45)},
+  MRNUMBER = {4550337},
+       DOI = {10.1090/proc/16187},
+       URL = {https://doi.org/10.1090/proc/16187},
+}
+@article {MR4546037,
+    AUTHOR = {Ghosh, Kartick},
+     TITLE = {Coupled {K}\"{a}hler-{E}instein and {H}ermitian-{Y}ang-{M}ills
+              equations},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {183},
+      YEAR = {2023},
+     PAGES = {Paper No. 103232, 33},
+      ISSN = {0007-4497},
+   MRCLASS = {53C55 (53D20)},
+  MRNUMBER = {4546037},
+       DOI = {10.1016/j.bulsci.2023.103232},
+       URL = {https://doi.org/10.1016/j.bulsci.2023.103232},
+}
+@article {MR4544163,
+    AUTHOR = {Bose, Babhrubahan and Roy, Saikat and Sain, Debmalya},
+     TITLE = {Geometry of sub-algebras of {$\Cal {H}ol(\Gamma\cup{\rm
+              Int}(\Gamma))$} and zeros of holomorphic functions},
+   JOURNAL = {Banach J. Math. Anal.},
+  FJOURNAL = {Banach Journal of Mathematical Analysis},
+    VOLUME = {17},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {Paper No. 23, 16},
+      ISSN = {2662-2033,1735-8787},
+   MRCLASS = {46B20 (30J10 30J99)},
+  MRNUMBER = {4544163},
+       DOI = {10.1007/s43037-022-00242-1},
+       URL = {https://doi.org/10.1007/s43037-022-00242-1},
+}
+@article {MR4542722,
+    AUTHOR = {Datar, Ved and Seshadri, Harish},
+     TITLE = {Diameter rigidity for {K}\"{a}hler manifolds with positive
+              bisectional curvature},
+   JOURNAL = {Math. Ann.},
+  FJOURNAL = {Mathematische Annalen},
+    VOLUME = {385},
+      YEAR = {2023},
+    NUMBER = {1-2},
+     PAGES = {471--479},
+      ISSN = {0025-5831,1432-1807},
+   MRCLASS = {32Q10 (32U25 53C21 53C55)},
+  MRNUMBER = {4542722},
+       DOI = {10.1007/s00208-021-02355-8},
+       URL = {https://doi.org/10.1007/s00208-021-02355-8},
+}@article {MR4536405,
 
     AUTHOR = {Sain, Debmalya and Ray, Anubhab and Dey, Subhrajit and Paul,
 
@@ -190,6 +681,100 @@
 
 }
 
+@article {MR4533980,
+    AUTHOR = {Ghosh, Mrinal K. and Kumar, K. Suresh and Pal, Chandan and
+              Pradhan, Somnath},
+     TITLE = {Nonzero-sum risk-sensitive stochastic differential games: a
+              multi-parameter eigenvalue problem approach},
+   JOURNAL = {Systems Control Lett.},
+  FJOURNAL = {Systems \& Control Letters},
+    VOLUME = {172},
+      YEAR = {2023},
+     PAGES = {Paper No. 105443, 11},
+      ISSN = {0167-6911,1872-7956},
+   MRCLASS = {91A15 (49L20 49N70 93E20)},
+  MRNUMBER = {4533980},
+       DOI = {10.1016/j.sysconle.2022.105443},
+       URL = {https://doi.org/10.1016/j.sysconle.2022.105443},
+}
+@article {MR4531681,
+    AUTHOR = {Binda, Federico and Krishna, Amalendu},
+     TITLE = {Suslin homology via cycles with modulus and applications},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {376},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {1445--1473},
+      ISSN = {0002-9947,1088-6850},
+   MRCLASS = {14C25 (14F42 19E15)},
+  MRNUMBER = {4531681},
+       DOI = {10.1090/tran/8815},
+       URL = {https://doi.org/10.1090/tran/8815},
+}
+@article {MR4531591,
+    AUTHOR = {Ayyer, Arvind and Sundaravaradan, Naren},
+     TITLE = {Combinatorial proofs of multivariate {C}ayley-{H}amilton
+              theorems},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {661},
+      YEAR = {2023},
+     PAGES = {247--269},
+      ISSN = {0024-3795,1873-1856},
+   MRCLASS = {05A19 (05A05 05C20 15A15)},
+  MRNUMBER = {4531591},
+MRREVIEWER = {Ravindra\ B.\ Bapat},
+       DOI = {10.1016/j.laa.2022.12.014},
+       URL = {https://doi.org/10.1016/j.laa.2022.12.014},
+}
+@article {MR4531009,
+    AUTHOR = {Ghosh, Mrinal K. and Golui, Subrata and Pal, Chandan and
+              Pradhan, Somnath},
+     TITLE = {Discrete-time zero-sum games for {M}arkov chains with
+              risk-sensitive average cost criterion},
+   JOURNAL = {Stochastic Process. Appl.},
+  FJOURNAL = {Stochastic Processes and their Applications},
+    VOLUME = {158},
+      YEAR = {2023},
+     PAGES = {40--74},
+      ISSN = {0304-4149,1879-209X},
+   MRCLASS = {91A15 (47J10 91A25)},
+  MRNUMBER = {4531009},
+       DOI = {10.1016/j.spa.2022.12.009},
+       URL = {https://doi.org/10.1016/j.spa.2022.12.009},
+}
+@article {MR4530780,
+    AUTHOR = {Khare, Apoorva and Sahi, Siddhartha},
+     TITLE = {From {C}auchy's determinant formula to bosonic and fermionic
+              immanant identities},
+   JOURNAL = {European J. Combin.},
+  FJOURNAL = {European Journal of Combinatorics},
+    VOLUME = {110},
+      YEAR = {2023},
+     PAGES = {Paper No. 103683, 16},
+      ISSN = {0195-6698,1095-9971},
+   MRCLASS = {15A15 (05E05)},
+  MRNUMBER = {4530780},
+       DOI = {10.1016/j.ejc.2022.103683},
+       URL = {https://doi.org/10.1016/j.ejc.2022.103683},
+}
+@article {MR4529464,
+    AUTHOR = {Mal, Arpita},
+     TITLE = {An approximation problem in the space of bounded operators},
+   JOURNAL = {Numer. Funct. Anal. Optim.},
+  FJOURNAL = {Numerical Functional Analysis and Optimization. An
+              International Journal},
+    VOLUME = {44},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {124--137},
+      ISSN = {0163-0563,1532-2467},
+   MRCLASS = {46B28 (41A50 46B25 47L05)},
+  MRNUMBER = {4529464},
+       DOI = {10.1080/01630563.2022.2158197},
+       URL = {https://doi.org/10.1080/01630563.2022.2158197},
+}
 @article {MR4523579,
 
     AUTHOR = {Giri, Deb Kumar and Rawat, Rama},
@@ -218,6 +803,22 @@
 
 }
 
+@article {MR4523121,
+    AUTHOR = {Dey, Subhrajit and Mal, Arpita and Paul, Kallol},
+     TITLE = {Geometric properties of operator spaces endowed with the
+              numerical radius norm},
+   JOURNAL = {Ann. Funct. Anal.},
+  FJOURNAL = {Annals of Functional Analysis},
+    VOLUME = {14},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {Paper No. 19, 14},
+      ISSN = {2639-7390,2008-8752},
+   MRCLASS = {46B20 (47L05)},
+  MRNUMBER = {4523121},
+       DOI = {10.1007/s43034-022-00239-9},
+       URL = {https://doi.org/10.1007/s43034-022-00239-9},
+}
 @article {MR4521655,
 
     AUTHOR = {Gudi, Thirupathi and Mallik, Gouranga and Sau, Ramesh Ch.},
@@ -250,6 +851,38 @@
 
 }
 
+@article {MR4517388,
+    AUTHOR = {Gudi, Thirupathi and Sau, Ramesh Ch.},
+     TITLE = {A two level finite element method for {S}tokes constrained
+              {D}irichlet boundary control problem},
+   JOURNAL = {Comput. Math. Appl.},
+  FJOURNAL = {Computers \& Mathematics with Applications. An International
+              Journal},
+    VOLUME = {129},
+      YEAR = {2023},
+     PAGES = {126--135},
+      ISSN = {0898-1221,1873-7668},
+   MRCLASS = {65N30 (35Q49 49M41 49N10 65N15)},
+  MRNUMBER = {4517388},
+       DOI = {10.1016/j.camwa.2022.11.026},
+       URL = {https://doi.org/10.1016/j.camwa.2022.11.026},
+}
+@article {MR4517260,
+    AUTHOR = {Cipriani, Alessandra and Dan, Biltu and Hazra, Rajat Subhra
+              and Ray, Rounak},
+     TITLE = {Maximum of the membrane model on regular trees},
+   JOURNAL = {J. Stat. Phys.},
+  FJOURNAL = {Journal of Statistical Physics},
+    VOLUME = {190},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {Paper No. 25, 32},
+      ISSN = {0022-4715,1572-9613},
+   MRCLASS = {60G15 (60G70 82B20 82B41)},
+  MRNUMBER = {4517260},
+       DOI = {10.1007/s10955-022-03043-w},
+       URL = {https://doi.org/10.1007/s10955-022-03043-w},
+}
 @article {MR4515645,
 
     AUTHOR = {Gehlawat, S. and Jain, A. and Sarkar, A. D.},
@@ -316,6 +949,22 @@
 
 }
 
+@article {MR4514909,
+    AUTHOR = {Biswas, Shibananda and Misra, Gadadhar and Sen, Samrat},
+     TITLE = {Geometric invariants for a class of submodules of analytic
+              {H}ilbert modules via the sheaf model},
+   JOURNAL = {Complex Anal. Oper. Theory},
+  FJOURNAL = {Complex Analysis and Operator Theory},
+    VOLUME = {17},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {Paper No. 2, 24},
+      ISSN = {1661-8254,1661-8262},
+   MRCLASS = {47B13 (32A10 32A36 32A38 47B32 47B35)},
+  MRNUMBER = {4514909},
+       DOI = {10.1007/s11785-022-01300-0},
+       URL = {https://doi.org/10.1007/s11785-022-01300-0},
+}
 @article {MR4514302,
 
     AUTHOR = {Bhattacharyya, Tirthankar and Das, B. Krishna and Sau,
@@ -350,6 +999,22 @@
 
 }
 
+@article {MR4512511,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Galois coverings of enriched categories and an extension of
+              {C}ohen-{M}ontgomery theorem},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {616},
+      YEAR = {2023},
+     PAGES = {155--192},
+      ISSN = {0021-8693,1090-266X},
+   MRCLASS = {18D15 (16B50 18D20)},
+  MRNUMBER = {4512511},
+MRREVIEWER = {Geoffrey\ S. H. Cruttwell},
+       DOI = {10.1016/j.jalgebra.2022.10.027},
+       URL = {https://doi.org/10.1016/j.jalgebra.2022.10.027},
+}
 @article {MR4509228,
 
     AUTHOR = {Demangos, Luca and Longhi, Ignazio},
