--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -19,6 +19,9 @@ books:
   - author: Samuel Karlin
     title: Total positivity
     publ:  Stanford University Press, 1968
+  - author: Apoorva Khare
+    title: Matrix analysis and entrywise positivity preservers
+    publ:  Cambridge University Press, 2022
 prereqs:
   - A course in linear algebra, and a course in calculus/real analysis.
 prereq-courses: MA 219
@@ -60,4 +63,8 @@ Application of Extension principle I. Low-rank counterexamples. Tanvi Jain's res
 
 __10.__ _Characterizations for functions preserving $\\mathbb{P}\_G$._
 Extension principle III: pendant edges. The case of trees. Chordal graphs and their properties. Functions and powers preserving $\\mathbb{P}\_G$ for $G$ chordal. Non-chordal graphs.
+
+__11.__ _Cayley-Menger matrices._
+Connections to Gram matrices, GPS trilateration, simplex volumes, and Heron's theorem.
+
 
