--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -21,7 +21,7 @@ books:
     publ:  Stanford University Press, 1968
   - author: Apoorva Khare
     title: Matrix analysis and entrywise positivity preservers
-    publ:  Cambridge University Press, 2022
+    publ:  Cambridge University Press + TRIM Series, 2022
 prereqs:
   - A course in linear algebra, and a course in calculus/real analysis.
 prereq-courses: MA 219
