--- a/_all-courses/ma379.md
+++ b/_all-courses/ma379.md
@@ -2,6 +2,20 @@
 code: MA 379
 title: Linear Algebraic Groups	
 prereqs:
+    - Commutative algebra
+    - Some familiarity with basic algebraic geometry and Lie algebras will be helpful, but it will be covered in the course as required.  
 books:
+    - author: T. A. Springer
+      title: Linear Algebraic Groups
+      publ: Modern Birkhaeuser Classics, 2nd edition, 1998
+    - author: Armand Borel
+      title: Linear Algebraic Groups
+      publ: Springer-Verlag GTM 126, 2nd edition, 1991
+    - author: James Humphreys
+      title: Linear Algebraic Groups
+      publ: Springer-Verlag GTM 21, 1975
 ---
+
+ Basic notions of linear algebraic groups (connected components, orbits, Jordan decomposition), Lie algebras, algebraic tori, solvable and unipotent groups, parabolic and Borel subgroups, representations of linear algebraic groups, reductive and semi-simple groups, the Weyl group, root systems and root datum, classification of connected reductive groups over an algebraically closed field.     
+
 
