--- a/_all-courses/ma261.md
+++ b/_all-courses/ma261.md
@@ -19,5 +19,5 @@ ug-prereq-courses:
 Sample spaces, events, probability, discrete and continuous random variables,
 Conditioning and independence, Bayes'  formula, moments and moment generating
 function, characteristic function, laws of large numbers, central limit
-theorem, Markov chains, Poisson processes.
+theorem, theory of estimation, testing of hypotheses, linear models.
  
