updated ug course codes, credits

--- a/_all-courses/uma101.md
+++ b/_all-courses/uma101.md
@@ -1,6 +1,7 @@
 ---
-code: UM 101
+code: UMA 101
 title: Analysis and Linear Algebra I
+credits: '4:0'
 books:
   - author: Apostol, T. M.
     title: Calculus, Volume I, 2nd edition
