--- a/_all-courses/uma102.md
+++ b/_all-courses/uma102.md
@@ -1,6 +1,7 @@
 ---
-code: UM 102
+code: UMA 102
 title: Analysis and Linear Algebra II
+credits: '4:0'
 books:
   - author: Apostol, T. M.
     title: Calculus, Volume II, 2nd edition
