--- a/_all-courses/uma201.md
+++ b/_all-courses/uma201.md
@@ -1,6 +1,7 @@
 ---
-code: UM 201
+code: UMA 201
 title: Probability and Statistics
+credits: '4:0'
 books:
   - author: Ross, S., Introduction to Probability and Statistics for Engineers and Scientists, Academic Press; 4th ed. (2009)
   - author: Freedman, Pisani and Purves
