--- a/_all-courses/ma358.md
+++ b/_all-courses/ma358.md
@@ -2,6 +2,35 @@
 code: MA 358
 title: Topics in Number Theory 4 (p-adic L-functions)	
 prereqs:
+    - a solid background in Algebraic Number Theory
+    - some familiarity with elliptic curves and modular forms.
+    -  a good background in commutative algebra
+    - some knowledge of L-functions (analytic number theory) will be preferable.      
+
 books:
+    - author:  Koblitz
+      title: p-adic Numbers, p-adic Analysis, and Zeta-Functions
+    - author:  Iwasawa
+      title: Lectures on P-Adic L-Functions
+    - author:  Washington
+      title:  Introduction to cyclotomic fields
+    - author:  Lang
+      title:  Cyclotomic fields
+    - author:  Diamond--Shurman
+      title:  A First Course in Modular Forms
+    - author:  Manin
+      title:  Parabolic points and Zeta functions of modular curves
+    - author:  Deligne—Ribet
+      title:  Values of abelian L-functions at negative integers over totally real fields
+
 ---
 
+ 
+
+We plan to cover (possibly a subset of) the following topics:
+
+1. Kubota—Leopoldt p-adic L-functions
+2. P-adic measures
+3. Leopoldt’s formula for L_p(1,chi)
+4. P-adic L-functions of totally real fields (following Deligne—Ribet)
+5. P-adic L-functions of ordinary elliptic curves and modular forms
