--- a/_all-courses/ma358a.md
+++ b/_all-courses/ma358a.md
@@ -2,5 +2,33 @@
 code: MA 358A
 title: Topics in Number Theory 3 (Iwasawa theory)
 prereqs:
+    - "MA 213 : Algebra 2"
+    - "MA 313 : Algebraic Number Theory"
+    - "This course will use material from MA 358 : Topics in Number Theory 2 (p-adic L-functions) and should be taken concurrently."
 books:
+    - title: On Z_l-Extensions of Algebraic Number Fields
+      author: K. Iwasawa
+      publ: Annals of Mathematics Vol. 98, No. 2 (1973)
+    
+    - title: Iwasawa Theory -- Past and Present
+      author: R. Greenberg
+      publ: Advanced Studies in Pure Mathematics 30, 2001.
+
+    - title: Values of Abelian L-functions at Negative Integers over Totally Real Fields
+      author: P. Deligne, K. Ribet
+      publ: Inventiones Mathematicae Vol. 59 (1980)
+    
+    - title: The Iwasawa Conjecture for Totally Real Fields.
+      author: A. Wiles
+      publ: Annals of Mathematics Vol. 131, No. 3 (1990)
+
 ---
+This course is an introduction to classical Iwasawa theory, up to the
+proof of Iwasawa main conjecture following Mazur and Wiles. We will
+begin with a review of results from algebraic number theory, class
+theory etc.This will be followed by a study of Z_p extensions of
+number fields. We will then concentrate on the cyclotomic Z_p
+extensions of number fields. This will be followed by formulation of
+Iwasawa main conjecture. For this part we need knowledge of p-adic
+L-functions. If time permits we will see Wiles's proof of the Iwasawa
+main conjecture.
