--- a/_all-courses/ma358a.md
+++ b/_all-courses/ma358a.md
@@ -6,7 +6,7 @@ prereqs:
     - "MA 313 : Algebraic Number Theory"
     - "This course will use material from MA 358 : Topics in Number Theory 2 (p-adic L-functions) and should be taken concurrently."
 books:
-    - title: On Z_l-Extensions of Algebraic Number Fields
+    - title: On $Z_l$-Extensions of Algebraic Number Fields
       author: K. Iwasawa
       publ: Annals of Mathematics Vol. 98, No. 2 (1973)
     
