--- a/_all-courses/ma358a.md
+++ b/_all-courses/ma358a.md
@@ -26,9 +26,9 @@ books:
 This course is an introduction to classical Iwasawa theory, up to the
 proof of Iwasawa main conjecture following Mazur and Wiles. We will
 begin with a review of results from algebraic number theory, class
-theory etc.This will be followed by a study of Z_p extensions of
-number fields. We will then concentrate on the cyclotomic Z_p
+theory etc. This will be followed by a study of $Z_p$ extensions of
+number fields. We will then concentrate on the cyclotomic $Z_p$
 extensions of number fields. This will be followed by formulation of
-Iwasawa main conjecture. For this part we need knowledge of p-adic
-L-functions. If time permits we will see Wiles's proof of the Iwasawa
+Iwasawa main conjecture. For this part we need knowledge of $p$-adic
+$L-functions. If time permits we will see Wiles's proof of the Iwasawa
 main conjecture.
